--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
-    
   },
   "repository": {
     "type": "git",
@@ -23,7 +22,10 @@
   "homepage": "https://github.com/lainemarkus/fullstack-palautukset/tree/main#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
